--- a/cloudremoval_MEcGAN.ipynb
+++ b/cloudremoval_MEcGAN.ipynb
@@ -640,7 +640,7 @@
         "                              generator=generator,\n",
         "                              discriminator=discriminator)\n",
         "\n",
-        "restore_checkpoint = True # To restore last checkpoint, set this to True \n",
+        "restore_checkpoint = False # To restore last checkpoint, set this to True \n",
         "if restore_checkpoint is False:\n",
         "    checkpoint_path = checkpoint_dir + '/training/cp-{epoch:04d}.ckpt'\n",
         "else:\n",
